--- a/src/App.css
+++ b/src/App.css
@@ -4,24 +4,38 @@ img {
   width: 100%;
   height: 100%;
 }
-
+.p{
+  font-family: "Rubik", serif;
+  font-optical-sizing: auto;
+  font-size: medium;
+  font-weight: 400;
+  font-style: normal;
+}
 .Text{
-  font-family: "Lato", serif;
+  font-family: "Rubik", serif;
+  font-optical-sizing: auto;
   font-size: medium;
   font-weight: 400;
   font-style: normal;
 }
 .navButton button {
-  font-family: "Lato", serif;
+  font-family: "Rubik", serif;
+  font-optical-sizing: auto;
   font-size: normal ;
-  font-weight: 550;
+  font-weight: 500;
   font-style: normal;
 }
+
 .navTextButton button {
   height: 1.5em;
   width: 1.5em;
-  font-family: "Lato", serif;
+  font-family: "Rubik", serif;
+  font-optical-sizing: auto;
   font-size: medium;
-  font-weight: 600;
+  font-weight: 400;
   font-style: normal;
+}
+
+.LandingPage{
+  background-image: url(./assets/landingPage.jpg);
 }
