--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,19 @@ img {
 .LandingPage{
   background-image: url(./assets/landingPage.jpg);
 }
+.roboto {
+  font-family: "Roboto", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.CalendarCss{
+    background: none !important;
+    background-color:bisque !important;
+}
+
+.react-calendar__tile--active {
+  background: #006edc !important;
+  color: white !important;
+}
