--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,9 @@ img {
   background-image: url(./assets/landingPage.jpg);
 }
 .roboto {
-  font-family: "Roboto", serif;
+  font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
 }
 
