--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ img {
   font-weight: 400;
   font-style: normal;
 }
-.navButton button {
+.navButton a {
   font-family: "Rubik", serif;
   font-optical-sizing: auto;
   font-size: normal ;
