--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,7 @@ img {
 button {
   cursor: pointer;
 }
+
+.Login{
+  background-image: linear-gradient(to top, #0061ff, #008fff, #00b4ff, #00d3ff, #60efff);
+}
